--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 	</section>
 
 	<section class="seccion_proteger margenes" data-aos="fade-up">
-		<h2>¿Porque proteger el medio ambiente?</h2>
+		<h2>¿Por qué proteger el medio ambiente?</h2>
 		<p class="subtitulos">El problema que inspira el trabajo de la Fundación Vida Silvestre Argentina es el uso desmedido de los recursos naturales.</p>
 		
 		<div class="medioambiente multiple-items" data-aos="fade-up">
